fixed grid item overflow

--- a/src/_includes/css/components/post.pcss
+++ b/src/_includes/css/components/post.pcss
@@ -7,6 +7,10 @@
 }
 .post__header {
   border-bottom: 1px solid #b2b2b2;
+  h1 {
+    font-size: 4rem;
+    line-height: 1.3;
+  }
 }
 p.post__date {
   margin-bottom: 0;
