--- a/src/_includes/css/global.pcss
+++ b/src/_includes/css/global.pcss
@@ -52,6 +52,7 @@ body {
 /* Blocks */
 main {
   padding: 100px 10% 0;
+  min-width: 0;
 }
 
 header {
@@ -135,6 +136,8 @@ blockquote,
 figure {
   font-size: 1.8rem;
   margin-bottom: 2rem;
+  word-wrap: break-word;
+  hyphens: auto;
 }
 
 code {
